# FapiaoAutoFlow

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
docker/: entrypoint.sh
src/fapiao/: __init__.py  __main__.py  acquire.py  cli.py  config.py  export.py  extract.py  fetchers.py  ingest.py  init.py  models.py  normalize.py  pipeline.py  store.py
tests/: conftest.py  test_acquire.py  test_export.py  test_extract.py  test_ingest.py  test_normalize.py  test_pipeline.py  test_store.py
